@@ -14,7 +14,7 @@
 #endif
 
 
-static const char * scsi_pt_version_str = "2.04 20100312";
+static const char * scsi_pt_version_str = "2.05 20100321";
 
 const char *
 scsi_pt_version()
