@@ -5,7 +5,7 @@
  * license that can be found in the BSD_LICENSE file.
  */
 
-/* sg_pt_freebsd version 1.09 20100312 */
+/* sg_pt_freebsd version 1.10 20100321 */
 
 #include <stdio.h>
 #include <stdlib.h>
@@ -291,6 +291,14 @@ set_scsi_pt_task_attr(struct sg_pt_base * vp,
     struct sg_pt_freebsd_scsi * ptp = &vp->impl;
 
     ++ptp->in_err;
+}
+
+void
+set_scsi_pt_flags(struct sg_pt_base * objp, int flags)
+{
+    /* do nothing, suppress warnings */
+    objp = objp;
+    flags = flags;
 }
 
 /* Executes SCSI command (or at least forwards it to lower layers).
