@@ -2,7 +2,7 @@ sg3-utils (1.29-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Fri, 12 Mar 2010 11:45:00 -0500
+ -- Doug Gilbert <dgilbert@interlog.com>  Sun, 21 Mar 2010 14:00:00 -0400
 
 sg3-utils (1.28-0.1) unstable; urgency=low
 
